test/cpls/errors/parameter-names.cpls
{
  "type": "CALL",
  "operator": {
    "type": "CALL",
    "operator": {
      "type": "WORD",
      "name": "fn",
      "offset": 0,
      "line": 1,
      "column": 1
    },
    "args": [
      {
        "type": "VALUE",
        "value": 1,
        "offset": 3,
        "line": 1,
        "column": 4
      },
      {
        "type": "VALUE",
        "value": 1,
        "offset": 6,
        "line": 1,
        "column": 7
      }
    ]
  },
  "args": []
}